// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingPlaceholder /> displays ClipLoader spinner and passes it supplied color & size props 1`] = `
<ClipLoader
  color="blue"
  loading={true}
  size="30px"
/>
`;

exports[`<LoadingPlaceholder /> displays provided message and margin 1`] = `
<div
  className="text-center"
  style={
    Object {
      "marginTop": "300px",
    }
  }
>
  <p>
    Test Message
  </p>
  <ClipLoader
    color="#3c8786"
    loading={true}
    size="22px"
  />
</div>
`;

exports[`<LoadingPlaceholder /> renders correctly 1`] = `
<div
  className="text-center"
  style={
    Object {
      "marginTop": "220px",
    }
  }
>
  <ClipLoader
    color="#3c8786"
    loading={true}
    size="22px"
  />
</div>
`;
